--- a/project/arithmetic-exercise/pom.xml
+++ b/project/arithmetic-exercise/pom.xml
@@ -14,5 +14,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
